--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "webpack-dev-server --inline  --hot --config ./build/webpack.config.js"
   },
   "dependencies": {
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
