--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "diagnose_sample",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "wkmkyt",
   "license": "MIT",
   "scripts": {
