--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
         "tabWidth": 2,
         "singleQuote": true,
         "semi": false,
-        "arrowParens": "always",
+        "arrowParens": "avoid",
         "trailingComma": "none",
         "jsxBracketSameLine": false
       }
