--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "author": "wkmkyt",
   "license": "MIT",
   "scripts": {
-    "clear": "rm -rf ./dist",
-    "build": "webpack --progress --colors --display-error-details --config ./build/webpack.config.js",
-    "watch": "webpack --progress --colors --watch --config ./build/webpack.config.js",
-    "start": "webpack-dev-server --inline  --hot --config ./build/webpack.config.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "vue": "^2.6.10",
@@ -17,12 +16,10 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^3.0.0",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-service": "^3.9.2",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.0.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^12.0.0",
@@ -33,11 +30,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.3",
     "prettier": "^1.18.2",
-    "style-loader": "^0.23.1",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "vue-template-compiler": "^2.6.10"
   }
 }
